req.get_int() was discarding 0 as a value. Save default die min and max in event play. Save default item type in item configure.

--- a/app/templates/configure/location.html
+++ b/app/templates/configure/location.html
@@ -275,6 +275,7 @@
             console.log("number of items={{ current.items | length }}");
             {% for item_at in current.items.values() %}
                 console.log("name={{item_at.item.name}}");
+                console.log("position={{ item_at.position }}");
                 addItem(
                     {{ item_at.item.id }},
                     "{{ item_at.item.name }}",
