--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,8 +4,9 @@
     <head>
         <title>{{ config['TITLE'] }}</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description"
-              content="ttrpg + incremental game implemented in python flask">
+              content="ttRPG + incremental game in python flask">
         <link rel="stylesheet"
               href="{{ url_for('static', filename='styles.css') }}">
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
