--- a/app/templates/configure/overall.html
+++ b/app/templates/configure/overall.html
@@ -9,10 +9,9 @@
 {% block content %}
     <h1>Overall Settings</h1>
     <p class="info">
-        When all win conditions are fulfilled,
-        a checkmark will be shown by the title on the Overview screen.
+        Fulfilling all win conditions shows a message in the log.
         At that point, you can either consider the scenario finished
-        or continue playing and perhaps adjust the win conditions.
+        or change the win conditions and continue playing.
     </p>
     <form method="post">
         <label for="title">Scenario Title:</label>
