--- a/app/templates/play/overview.html
+++ b/app/templates/play/overview.html
@@ -20,147 +20,226 @@
             });
         });
     </script>
-    {% if current.have_won() %}
-        <h1 style="color:green">
-            <span title="You won this scenario! The requirements in Overall Settings have been met.">✅</span>
-            {{ current.title }}
-        </h1>
-    {% else %}
-        <h1>{{ current.title }}</h1>
-    {% endif %}
+    <h1>{{ current.title }}</h1>
     <p class="info">{{ current.description|htmlify }}</p>
-    <!-- Top-level Events -->
-    {% if active.events %}
-        <div class="popup-button" style="margin-bottom: 20px">
-            <button>
-                Events <span class="dropdown-icon">▼</span>
-            </button>
-            <div class="popup-frame">
-                <div class="popup-list">
-                    {% for event in active.events %}
-                        <a href="{{ url_for('play_event', event_id=event.id) }}">{{ event.name }}</a>
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
-    {% endif %}
-    <!-- Top-level Characters and their Location -->
-    {% if active.characters %}
-        <table class="spacious">
-            <tr>
-                <th>Character</th>
-                <th>At</th>
-            </tr>
-            {% for char in active.characters %}
-                <tr>
-                    <td>
-                        {% if char.char_id %}
-                            {% set link = url_for('play_char', char_id=char.char_id) %}
-                            {% set letter = link_letters.next(link) %}
-                            <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                            <span>[{{ letter }}]</span>
-                            <a href="{{ link }}">{{ char.char_name }}</a>
-                        {% endif %}
-                    </td>
-                    <td>
-                        {% if char.loc_id %}
-                            {% set link = url_for('play_location', loc_id=char.loc_id) %}
-                            {% set letter = link_letters.next(link) %}
-                            <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                            <span>[{{ letter }}]</span>
-                            <a href="{{ link }}">{{ char.loc_name }}</a>
-                        {% endif %}
-                    </td>
-                </tr>
-            {% endfor %}
-        </table>
-    {% endif %}
-    <!-- Top-level Locations -->
-    {% if active.locations %}
-        <table class="spacious">
-            <tr>
-                <th>Locations</th>
-            </tr>
-            {% for loc in active.locations %}
-                {% set link = url_for('play_location', loc_id=loc.id) %}
-                {% set letter = link_letters.next(link) %}
-                <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                <tr>
-                    <td>
-                        <span>[{{ letter }}]</span>
-                        <a href="{{ link }}">{{ loc.name }}</a>
-                    </td>
-                </tr>
-            {% endfor %}
-        </table>
-    {% endif %}
-    <!-- Items in General Storage -->
-    {% if active.items %}
-        <table class="spacious">
-            <tr>
-                <th>General Storage</th>
-                <th>Quantity</th>
-                <th>Attributes</th>
-            </tr>
-            {% for item in active.items %}
-                {% set link = url_for('play_item', item_id=item.id, main='universal') %}
-                {% set letter = link_letters.next(link) %}
-                <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                <tr>
-                    <td>
-                        <span>[{{ letter }}]</span>
-                        <a href="{{ link }}">{{ item.name }}</a>
-                    </td>
-                    <td id="item-{{ item.id }}-quantity">
-                        {{ item.quantity | formatNum }}
-                        {% if item.is_ongoing %}<span title="currently in production">🔄</span>{% endif %}
-                    </td>
-                    <td>
-                        {% if item.attribs %}
-                            {% for attrib_of in item.attribs[:2] %}
-                                {% set link = url_for('play_attrib', attrib_id=attrib_of.attrib_id, subject_type='item', subject_id=item.id) %}
-                                {% set letter = link_letters.next(link) %}
-                                <script>linkForKey['{{ letter }}'] = "{{ link|safe }}";</script>
-                                <span>[{{ letter }}]</span>
-                                <a href="{{ link }}">{{ attrib_of.attrib.name }}</a>{% if not attrib_of.attrib.binary %}<span>:</span>{% endif %}
-                                {% if attrib_of.attrib.enum %}
-                                    {% set index = attrib_of.val | int %}
-                                    {% if index in range(attrib_of.attrib.enum | length) %}
-                                        {{ attrib_of.attrib.enum[index] }}
-                                    {% else %}
-                                        ?
-                                    {% endif %}
-                                {% elif not attrib_of.attrib.binary %}
-                                     {{ attrib_of.val | formatNum }}
-                                {% endif %}
-                            {% else %}
-                                (None)
-                                <br>
+    <div class="column-container">
+        <div><!-- lefthand column -->
+            <!-- Top-level Events -->
+            {% if active.events %}
+                <div class="popup-button" style="margin-bottom: 20px">
+                    <button>
+                        Events <span class="dropdown-icon">▼</span>
+                    </button>
+                    <div class="popup-frame">
+                        <div class="popup-list">
+                            {% for event in active.events %}
+                                <a href="{{ url_for('play_event', event_id=event.id) }}">{{ event.name }}</a>
                             {% endfor %}
-                        {% endif %}
-                    </td>
-                </tr>
-            {% endfor %}
-        </table>
-    {% endif %}
-    <script>
-        /*
-        $(document).ready(() => {
-            function updateQuantities() {
-                {% for item in active.items %}
-                    // Make AJAX request for item quantity
-                    $.get('/item/progress/{{ item.id }}', (data) => {
-                        $('#item-{{ item.id }}-quantity').text(data.quantity_str);
-                    });
-                {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+            <!-- Top-level Characters and their Location -->
+            {% if active.characters %}
+                <table class="spacious">
+                    <tr>
+                        <th>Character</th>
+                        <th>At</th>
+                    </tr>
+                    {% for char in active.characters %}
+                        <tr>
+                            <td>
+                                {% if char.char_id %}
+                                    {% set link = url_for('play_char', char_id=char.char_id) %}
+                                    {% set letter = link_letters.next(link) %}
+                                    <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
+                                    <span>[{{ letter }}]</span>
+                                    <a href="{{ link }}">{{ char.char_name }}</a>
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if char.loc_id %}
+                                    {% set link = url_for('play_location', loc_id=char.loc_id) %}
+                                    {% set letter = link_letters.next(link) %}
+                                    <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
+                                    <span>[{{ letter }}]</span>
+                                    <a href="{{ link }}">{{ char.loc_name }}</a>
+                                {% endif %}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            {% endif %}
+            <!-- Top-level Locations -->
+            {% if active.locations %}
+                <table class="spacious">
+                    <tr>
+                        <th>Locations</th>
+                    </tr>
+                    {% for loc in active.locations %}
+                        {% set link = url_for('play_location', loc_id=loc.id) %}
+                        {% set letter = link_letters.next(link) %}
+                        <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
+                        <tr>
+                            <td>
+                                <span>[{{ letter }}]</span>
+                                <a href="{{ link }}">{{ loc.name }}</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            {% endif %}
+            <!-- Items in General Storage -->
+            {% if active.items %}
+                <table class="spacious">
+                    <tr>
+                        <th>General Storage</th>
+                        <th>Quantity</th>
+                        <th>Attributes</th>
+                    </tr>
+                    {% for item in active.items %}
+                        {% set link = url_for('play_item', item_id=item.id, main='universal') %}
+                        {% set letter = link_letters.next(link) %}
+                        <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
+                        <tr>
+                            <td>
+                                <span>[{{ letter }}]</span>
+                                <a href="{{ link }}">{{ item.name }}</a>
+                            </td>
+                            <td id="item-{{ item.id }}-quantity">
+                                {{ item.quantity | formatNum }}
+                                {% if item.is_ongoing %}<span title="currently in production">🔄</span>{% endif %}
+                            </td>
+                            <td>
+                                {% if item.attribs %}
+                                    {% for attrib_of in item.attribs[:2] %}
+                                        {% set link = url_for('play_attrib', attrib_id=attrib_of.attrib_id, subject_type='item', subject_id=item.id) %}
+                                        {% set letter = link_letters.next(link) %}
+                                        <script>linkForKey['{{ letter }}'] = "{{ link|safe }}";</script>
+                                        <span>[{{ letter }}]</span>
+                                        <a href="{{ link }}">{{ attrib_of.attrib.name }}</a>{% if not attrib_of.attrib.binary %}<span>:</span>{% endif %}
+                                        {% if attrib_of.attrib.enum %}
+                                            {% set index = attrib_of.val | int %}
+                                            {% if index in range(attrib_of.attrib.enum | length) %}
+                                                {{ attrib_of.attrib.enum[index] }}
+                                            {% else %}
+                                                ?
+                                            {% endif %}
+                                        {% elif not attrib_of.attrib.binary %}
+                                             {{ attrib_of.val | formatNum }}
+                                        {% endif %}
+                                    {% else %}
+                                        (None)
+                                        <br>
+                                    {% endfor %}
+                                {% endif %}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            {% endif %}
+        </div>
+        <style>
+            .scrollable {
+                height: 300px;
+                max-width: 400px;
+                overflow-y: auto;
+                border: 1px solid lightgray;
+                padding: 10px;
             }
+        </style>
+        <div class="expand"><!-- righthand column -->
+            <div class="scrollable">
+                {% for entry in log_messages %}
+                    {% set message, count = entry %}
+                    <p style="color: tan;">{{ message | safe }}
+                        {% if count > 1 %}
+                        <span class="label-like"> (x{{ count }})</span>
+                        {% endif %}
+                    </p>
+                {% endfor %}
+            </div>
+            <br>
+            <label>
+                <input type="checkbox" id="reload-toggle">
+                Reload every
+            </label>
+            <input type="text" id="reload-every" style="width: 20px;">
+            <span class="label-like">seconds</span>
+        </div>
+    </div>
+    <script>
+        $(document).ready(() => {
+            function scrollLogToBottom() {
+                const logContainer = document.querySelector('.scrollable');
+                logContainer.scrollTop = logContainer.scrollHeight;
+            }
+            scrollLogToBottom();
 
-            // Update quantities initially
-            updateQuantities();
+            let reloadInterval;
+            function initializeReloadSettings() {
+                const $reloadToggle = $('#reload-toggle');
+                const $reloadEvery = $('#reload-every');
+                const toggleState = localStorage.getItem($reloadToggle.attr('id'));
+                $reloadToggle.prop('checked', toggleState === 'true');
+                $reloadEvery.prop('disabled', !toggleState === 'true');
+                const valEvery = localStorage.getItem($reloadEvery.attr('id'));
+                if (valEvery) {
+                    $reloadEvery.val(valEvery);
+                    setReloadInterval($reloadEvery);
+                }
+            }
+            initializeReloadSettings();
 
-            // Update quantities periodically
-            setInterval(updateQuantities, 10000);
+            function setReloadInterval($field) {
+                if ($field === undefined) {
+                    console.error('$field is undefined');
+                    return;
+                }
+                let seconds = parseInt($field.val(), 10);
+                if (reloadInterval) {
+                    clearInterval(reloadInterval);
+                }
+                if (isNaN(seconds) || seconds <= 0) {
+                    $field.val('');
+                    localStorage.setItem($field.attr('id'), 0);
+                    return;
+                }
+                if (seconds < 4) {  // minimum
+                    seconds = 4;
+                    $field.val(seconds);
+                }
+                localStorage.setItem($field.attr('id'), seconds);
+                const $toggle = $('#reload-toggle');
+                if (!$toggle.is(':checked')) {
+                    return;
+                }
+                reloadInterval = setInterval(() => {
+                    location.reload();
+                }, seconds * 1000);
+                console.log(`set reload interval to ${seconds} seconds`);
+            }
+            let debounceTimer;  // wait a short time for the user to finish typing
+            $('#reload-every').on('input', function() {
+                const $input = $(this);
+                clearTimeout(debounceTimer);
+                debounceTimer = setTimeout(() => {
+                    setReloadInterval($input);
+                }, 800);
+            });
+            $('#reload-toggle').on('change', function() {
+                const $reloadEvery = $('#reload-every');
+                const $toggle = $(this);
+                const isChecked = $toggle.is(':checked');
+                localStorage.setItem($toggle.attr('id'), isChecked);
+                if (isChecked) {
+                    $reloadEvery.prop('disabled', false);
+                    setReloadInterval($reloadEvery);
+                } else {
+                    $reloadEvery.prop('disabled', true);
+                    clearInterval(reloadInterval);
+                }
+            });
         });
-        */
     </script>
 {% endblock %}
